--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.1",
     "grunt-config-dir": "^0.3.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
